[dev] update video address

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     <br><br>
     <h2>视频演示</h2>
     <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.bilibili.com/video/BV1NZ4y1a7ai" frameborder="0" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.bilibili.com/video/BV1Js4y1D7Rd" frameborder="0" allowfullscreen></iframe>
     </div>
 </div>
 
