--- a/public/index.html
+++ b/public/index.html
@@ -1,45 +1,40 @@
 <html>
-<head>
-    <title>ChatProgram 产品主页</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <title>ChatProgram 产品主页</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="stylesheet" href="./index.css" />
+        <!-- <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" />
+        <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+        <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script> -->
+    </head>
+    <body>
+        <div class="header">
+            <h1>ChatProgram 产品主页</h1>
+            <p>ChatProgram 能够根据需求文档，快速生成一整套应用程序，提高程序员的生产力，降低初级用户写程序的门槛，从而减小开发者们的负担。</p>
+        </div>
+        <div class="container">
+            <h2 class="title">ChatProgram 特点</h2>
+            <ul class="list">
+                <li>自动化：ChatProgram 可以依据文档来自动化生成整个项目，大大节省了开发者的时间和精力。</li>
+                <li>prompt engineering：ChatProgram 做了详尽的 prompt engineering，避免了用户在接口方面的疑惑和困扰，提升了用户使用体验。</li>
+                <li>用户体验优化：ChatProgram 在打造产品过程中，一直保持为用户着想的心态，力求做到机制简单、操作方便，提升用户体验。</li>
+                <li>降低用户开发门槛：ChatProgram 极大地缩小了初级用户开发的门槛，缓解了初学者学习进程中的紧张情绪和思维疲劳。</li>
+                <li>生产力提升：ChatProgram 仅仅需要用户输入简单的指令，在快速生成整套程序的同时，也提高了程序员的生产效率。</li>
+            </ul>
+            <br />
+            <h2 class="title">商务合作</h2>
+            <p>我们欢迎与各位商务合作，如果你对我们的产品感兴趣，欢迎联系我们：微信 rocon2001。</p>
+            <p>我们也创建了用户交流群，可以通过扫以下二维码来加入：</p>
 
-    <!-- 引用 Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+            <div class="qrBox">
+                <img class="qr" src="qrcode.png" alt="ChatProgram 用户交流群二维码" />
+            </div>
 
-</head>
-<body>
+            <a class="app" href="/app/"><button type="button" class="btn btn-primary">打 开 应 用</button></a>
 
-<div class="jumbotron text-center">
-    <h1>ChatProgram 产品主页</h1>
-    <p>ChatProgram 能够根据需求文档，快速生成一整套应用程序，提高程序员的生产力，降低初级用户写程序的门槛，从而减小开发者们的负担。</p>
-</div>
-
-<div class="container">
-    <h2>ChatProgram 特点</h2>
-    <ul>
-        <li>自动化：ChatProgram 可以依据文档来自动化生成整个项目，大大节省了开发者的时间和精力。</li>
-        <li>prompt engineering：ChatProgram 做了详尽的 prompt engineering，避免了用户在接口方面的疑惑和困扰，提升了用户使用体验。</li>
-        <li>用户体验优化：ChatProgram 在打造产品过程中，一直保持为用户着想的心态，力求做到机制简单、操作方便，提升用户体验。</li>
-        <li>降低用户开发门槛：ChatProgram 极大地缩小了初级用户开发的门槛，缓解了初学者学习进程中的紧张情绪和思维疲劳。</li>
-        <li>生产力提升：ChatProgram 仅仅需要用户输入简单的指令，在快速生成整套程序的同时，也提高了程序员的生产效率。</li>
-    </ul>
-    <br>
-    <h2>商务合作</h2>
-    <p>我们欢迎与各位商务合作，如果你对我们的产品感兴趣，欢迎联系我们：微信 rocon2001。</p>
-    <p>我们也创建了用户交流群，可以通过扫以下二维码来加入：</p>
-    <img src="qrcode.png" alt="ChatProgram 用户交流群二维码">
-
-    <a href="/app/"><button type="button" class="btn btn-primary">打开应用</button></a>
-
-    <br><br>
-    <h2>视频演示</h2>
-    <div class="embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.bilibili.com/video/BV1Js4y1D7Rd" frameborder="0" allowfullscreen></iframe>
-    </div>
-</div>
-
-</body>
+            <h2 class="title">视频演示</h2>
+            <iframe class="video" src="https://www.bilibili.com/video/BV1Js4y1D7Rd" frameborder="0" allowfullscreen></iframe>
+        </div>
+    </body>
 </html>
