Update embedded iframe video.
Signed-off-by: zzjin <tczzjin@gmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
                 autoplay
                 controls
             ></video> -->
-            <iframe class="video" style="height: 400px" src="https://www.bilibili.com/video/BV1Js4y1D7Rd" frameborder="0" allowfullscreen security="restricted" sandbox="allow-forms allow-scripts allow-same-origin allow-popups"></iframe>
+            <iframe class="video" style="height: 400px" src="//player.bilibili.com/player.html?aid=994265271&bvid=BV1Js4y1D7Rd&cid=1074649342&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" frameborder="0" allowfullscreen security="restricted" sandbox="allow-forms allow-scripts allow-same-origin allow-popups"></iframe>
         </div>
     </body>
 </html>
